[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/EnterGame.gd" type="Script" id=1]
[ext_resource path="res://Wallpapers/test1.jpg" type="Texture" id=2]

[node name="EnterGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Wallpaper" type="TextureRect" parent="."]
modulate = Color( 0.803922, 1, 1, 0.937255 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Slot1" type="Button" parent="."]
margin_left = 28.0
margin_top = 535.0
margin_right = 145.0
margin_bottom = 555.0
text = "Create Character"

[node name="Delete1" type="Button" parent="."]
margin_left = 28.0
margin_top = 559.0
margin_right = 145.0
margin_bottom = 579.0
text = "Delete"

[node name="Slot2" type="Button" parent="."]
margin_left = 261.0
margin_top = 535.0
margin_right = 378.0
margin_bottom = 555.0
text = "Create Character"

[node name="Delete2" type="Button" parent="."]
margin_left = 261.0
margin_top = 559.0
margin_right = 378.0
margin_bottom = 579.0
text = "Delete"

[node name="Slot3" type="Button" parent="."]
margin_left = 502.0
margin_top = 535.0
margin_right = 619.0
margin_bottom = 555.0
text = "Create Character"

[node name="Delete3" type="Button" parent="."]
margin_left = 502.0
margin_top = 559.0
margin_right = 619.0
margin_bottom = 579.0
text = "Delete"

[node name="Slot4" type="Button" parent="."]
margin_left = 719.0
margin_top = 535.0
margin_right = 836.0
margin_bottom = 555.0
text = "Create Character"

[node name="Delete4" type="Button" parent="."]
margin_left = 719.0
margin_top = 559.0
margin_right = 836.0
margin_bottom = 579.0
text = "Delete"
